--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
     "gh-pages": "^3.1.0",
     "handlebars": "^4.7.7",
     "parcel-bundler": "^1.12.5",
@@ -26,5 +27,7 @@
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@pnotify/mobile": "^5.2.0"
+  }
 }
